updated the viz file

--- a/intersection_match_n_cluster.ipynb
+++ b/intersection_match_n_cluster.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,6 +663,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aggregated_names = tmc.groupby('intersection_id')['intersection'].first().reset_index()\n",
+    "tmc = pd.merge(tmc.drop('intersection', axis=1), aggregated_names, on='intersection_id', how='left')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
    "outputs": [],
@@ -674,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
